Made upload use multiple threads while uploading a folder

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 cryptography==41.0.5
+dotwiz==0.4.0
 humanize==4.9.0
+outdated==0.2.2
 pathvalidate==3.2.0
 pwinput==1.0.3
-PyYAML==6.0.1
 setuptools==66.1.1
+toml==0.10.2
 tqdm==4.66.1
